# repro-bazel-rules_go-nogo-nilaway

./: BUILD.bazel  README.md  WORKSPACE  main.go  repositories.bzl
my-lib/: panicboi.go
